--- a/FAQ.html
+++ b/FAQ.html
@@ -351,9 +351,7 @@ Download tomcat 5 or higher, a Java JRE 5 or higher and the PHP/Java Bridge 4.1.
 </p>
 <p>
 The following example uses two nodes running on two machines called
-"carlos" and "diego". The web server is running on a third machine
-which has full access to both nodes (at least it needs access to the
-ports from the range [9267, [9367).
+"carlos" and "diego".
 </p>
 <p>
 On all nodes: Extract the tomcat distribution into a directory.
@@ -401,98 +399,48 @@ On all nodes: Extract the tomcat distribution into a directory.
 <p>Copy the "JavaBridge.war" into the "webapps" directory on "diego" and "carlos" and start both nodes. For example with the command:
 <blockquote>
 <code>
-JAVA_OPTS="-Dphp.java.bridge.promiscuous=true" JAVA_HOME=/opt/jdk1.5 bin/catalina.sh run
+JAVA_OPTS="-Dphp.java.bridge.promiscuous=true" JAVA_HOME=/usr/java/default bin/catalina.sh run
 </code>
 </blockquote>
 </p>
-<p>Start the web server on the third computer "timon". For example with the command:
-<blockquote>
-<code>
-apachectl restart
-</code>
-</blockquote>
-</p>
-<p>Create a PHP script called "sessionSharing-diego.php" and copy it into the web server document root (usually "/var/www/html" or "~/public_html") on "timon":
-<blockquote>
-<code>
-&lt;?php<br>
-require_once("http://diego:8080/JavaBridge/java/Java.inc"); // change to "java/Java.inc" if you use a load balancer<br>
-$session = java_session();<br>
-if(is_null($session-&gt;get("counter"))) <br>
-&nbsp;&nbsp;$session-&gt;put("counter", new Java("java.lang.Integer", 1));<br>
-<br>
-$counter = java_values($session-&gt;get("counter"));<br>
-print "HttpSession variable \"counter\": $counter&lt;br&gt;\n";<br>
-$next = new Java("java.lang.Integer", $counter+1);<br>
-$session-&gt;put("counter", $next);<br>
-?&gt;<br>
-</code>
-</blockquote>
-</p>
-<p>Create a PHP script called "sessionSharing-carlos.php" and copy it into the web server document root (usually "/var/www/html" or "~/public_html") on "timon":
-<blockquote>
-<code>
-&lt;?php<br>
-require_once("http://carlos:8080/JavaBridge/java/Java.inc"); // change to "java/Java.inc" if you use a load balancer<br>
-$session = java_session();<br>
-if(is_null($session-&gt;get("counter"))) <br>
-&nbsp;&nbsp;$session-&gt;put("counter", new Java("java.lang.Integer", 1));<br>
-<br>
-$counter = java_values($session-&gt;get("counter"));<br>
-print "HttpSession variable \"counter\": $counter&lt;br&gt;\n";<br>
-$next = new Java("java.lang.Integer", $counter+1);<br>
-$session-&gt;put("counter", $next);<br>
-?&gt;<br>
-</code>
-</blockquote>
-</p>
-<p>Start a web brower and remove all cookies</p>
+
 <p>
-Browse to <code>http://timon/sessionSharing-carlos.php</code> and check the generated cookie. It should have the key "JSESSIONID", host attribute "timon" and the path attribute "/". The value should be "1". Click on the browser refresh button to increase the value.
-</p>
-<p>
-Use the same browser window and navigate to <code>http://timon/sessionSharing-diego.php</code> and check if there is still only one cookie with the same attributes as before. The value should be "3"
-</p>
-<p>
-Use the same browser window and navigate to <code>http://timon/sessionSharing-carlos.php</code> and check if there is still only one cookie with the same attributes as before. The value should be "4".
-</p>
-<p>
-Switch off "diego" and start it again.
-</p>
-<p>
-Use the same browser window and navigate to <code>http://timon/sessionSharing-diego.php</code> and check if there is still only one cookie with the same attributes as before. The value should be "5"
-</p>
-<p>
-Switch off "carlos".
-</p>
-<p>
-Use the same browser window and navigate to <code>http://timon/sessionSharing-carlos.php</code> and check if you get an exception.
-</p>
-<p>
-Start "carlos".
-</p>
-<p>
-Use the same browser window and navigate to <code>http://timon/sessionSharing-carlos.php</code> and check if there is still only one cookie with the same attributes as before. The value should be "6"
-</p>
-<p>
-Please see your HTTP server documentation and <a href="#load-balancing">the description above</a> how to set it up as a load balancer. This differs from the architecture described above in that the load balancer forwards the requests to the nodes and the nodes run PHP using the FastCGI mechanism.
+Please see your HTTP server documentation and <a href="#load-balancing">the description above</a> how to set it up as a load balancer.
 </p>
 </a>
 <a name="global-servlet">
 <H4>I want to use PHP for all tomcat applications. Apache and IIS are not available, but performance is important. How do I install it?</H4>
 </a>
-<p> Check if your PHP cgi binary supports the <code>-b</code> flag. If not, compile PHP with the <code>--enable-fastcgi</code> option </p>
-<p>
-Download and install the J2EE binary: copy <code>JavaBridge.war</code> into the tomcat <code>webapps</code> folder.
-</p>
-<p>
-Copy the <code>JavaBridge.jar</code> and the <code>php-servlet.jar</code> from the JavaBridge.war into the tomcat <code>shared/lib</code> folder. Uncomment the <code>shared_fast_cgi_pool</code> parameter in the <code>JavaBridge/WEB-INF/web.xml</code> and add the lines marked with a <code>+</code> to the tomcat <code>conf/web.xml</code>:
+<ol>
+<li>
+Download and install the J2EE binary: copy <code>JavaBridge.war</code> into the tomcat <code>webapps</code> folder.<br>
+<li>
+Start tomcat, for example with: 
+<blockquote>
+<code>
+JAVA_HOME=/usr/java/default /opt/tomcat/bin/catalina.sh run
+</code>
+</blockquote>
+<li>
+Move(!) all libraries from the created webapps/JavaBridge/WEB-INF/lib folder to the tomcat lib folder. Example:
+<blockquote>
+<code>
+mv /opt/tomcat/webapps/JavaBridge/WEB-INF/lib/* /opt/tomcat/lib
+</code>
+</blockquote>
+<li> 
+Stop tomcat and remove webapps/JavaBridge.war. <em>Make sure that webapps/JavaBridge still exists but webapps/JavaBridge/WEB-INF/lib is empty!</em><br>
+<li>
+Add the lines marked with a <code>+</code> to the tomcat <code>conf/web.xml</code>:
 <blockquote>
 <code>
 <br>
    &lt;!-- ================== Built In Servlet Definitions ==================== --&gt;<br>
 <br>
+
 +    &lt;!-- PHP Servlet --&gt;<br>
++    &lt;listener&gt; &lt;listener-class&gt;php.java.servlet.ContextLoaderListener&lt;/listener-class&gt; &lt;/listener&gt;<br>
++    &lt;listener&gt; &lt;listener-class&gt;php.java.servlet.RequestListener&lt;/listener-class&gt; &lt;/listener&gt;<br>
 +    &lt;servlet&gt;<br>
 +        &lt;servlet-name&gt;GlobalPhpJavaServlet&lt;/servlet-name&gt;<br>
 +        &lt;servlet-class&gt;php.java.servlet.PhpJavaServlet&lt;/servlet-class&gt;<br>
@@ -501,12 +449,7 @@ Copy the <code>JavaBridge.jar</code> and the <code>php-servlet.jar</code> from t
 +    &lt;servlet&gt;<br>
 +        &lt;servlet-name&gt;GlobalPhpCGIServlet&lt;/servlet-name&gt;<br>
 +        &lt;servlet-class&gt;php.java.servlet.PhpCGIServlet&lt;/servlet-class&gt;<br>
-+        &lt;init-param&gt;<br>
-+        &lt;!-- Remember to set the shared_fast_cgi_pool option --&gt;<br>
-+        &lt;!-- in JavaBridge/WEB-INF/web.xml to On, too. --&gt;<br>
-+        &lt;param-name&gt;shared_fast_cgi_pool&lt;/param-name&gt;<br>
-+        &lt;param-value&gt;On&lt;/param-value&gt;<br>
-+        &lt;/init-param&gt;<br>
++        &lt;init-param&gt; &lt;param-name&gt;shared_fast_cgi_pool&lt;/param-name&gt;&lt;param-value&gt;On&lt;/param-value&gt;&lt;/init-param&gt;<br>
 +    &lt;/servlet&gt;<br>
 <br>
    &lt;!-- The default servlet for all web applications, that serves static     --&gt;<br>
@@ -532,13 +475,14 @@ Copy the <code>JavaBridge.jar</code> and the <code>php-servlet.jar</code> from t
 </code>
 </blockquote>
 </p>
-To test the above settings create a directory <code>testapp</code> and copy the <code>test.php</code> file from the <code>JavaBridge.war</code> into this folder. Type <code>cd testapp; jar cf ../testapp.war *</code> and copy the testapp.war into the tomcat <code>webapps</code> folder.
-Restart tomcat, browse to 
-<code>http://yourHost.com:8080/testapp/test.php</code>.
+<li>
+Start tomcat again.
+</ol>
+To test the above settings copy test.php to some other web context, for example "examples" and browse to
+<code>http://yourHost.com:8080/examples/test.php</code>.
 </p>
-<p>
-Check if the PHP Fast-CGI server is running. The process list should display 5 (default) PHP instances waiting in the PHP Fast-CGI pool. If not, check if your PHP binary has been compiled with Fast-CGI enabled. Copy a Fast-CGI enabled binary into the <code>webapps/JavaBridge/WEB-INF/cgi/</code> folder, if necessary.
-</p>
+
+
 <a name="php-web-app">
 <H4>How do I create a standalone PHP web application for distribution and how can users deploy it into tomcat?</H4>
 </a>
@@ -584,133 +528,13 @@ Copy the files <code>sessionSharing.jsp</code> and <code>sessionSharing.php</cod
 <p>The web archive can now be distributed, copy it to the tomcat <code>webapps</code> directory and re-start tomcat. Visit <code>http://localhost/myApplication/sessionSharing.php</code> and <code>http://localhost/myApplication/sessionSharing.jsp</code>.
 </p>
 
-<a name="http-front-end">
-<H4>I want to use Apache/IIS as a front-end and tomcat as a back end. How do I enable PHP for all my applications?</H4>
-</a>
-<p>
-Download and install the J2EE binary: copy <code>JavaBridge.war</code> into the tomcat <code>webapps</code> folder.
-Check if the tomcat <code>webapps</code> directory is shared with the Apache/IIS <code>htdocs</code> directory. If not, change the Apache/IIS setting, the following example is for Apache 2. Edit e.g. <code>/etc/httpd/conf/httpd.conf</code> as follows: 
-<blockquote>
-<code>
- # documents. By default, all requests are taken from this directory, but<br>
- # symbolic links and aliases may be used to point to other locations.<br>
- #<br>
--DocumentRoot "/var/www/html"<br>
-+DocumentRoot "/var/lib/tomcat5/webapps"<br>
-<br>
- #<br>
- # Each directory to which Apache has access can be configured with respect<br>
- #<br>
- # This should be changed to whatever you set DocumentRoot to.<br>
- #<br>
--&lt;Directory "/var/www/html"&gt;<br>
-+&lt;Directory "/var/lib/tomcat5/webapps"&gt;<br>
-</code>
-</blockquote>
-</p>
-<p>
-Edit the <code>java.host</code> and <code>java.servlet</code> options in your <code>Java.inc</code> or, if you use the C implementation, the <code>php.ini</code>:
-<blockquote>
-<code>
-[java]<br>
-java.hosts = 127.0.0.1:8080<br>
-java.servlet = On<br>
-</code>
-</blockquote>
-</p>
-To test the above settings create a directory <code>testapp</code> and copy the <code>sessionSharing.php</code> file from the <code>JavaBridge.war</code> into this folder. Type <code>cd testapp; jar cf ../testapp.war *</code> and copy the testapp.war into the tomcat <code>webapps</code> folder.
-Restart Apache or IIS and tomcat, browse to 
-<code>http://localhost/testapp</code>, click on sessionSharing.php and check the generated cookie value. The <code>path</code> value must be <code>/</code>.
-</p>
 
 <a name="php-jsp-session-sharing">
 <H4>I want to use Apache/IIS as a front-end and tomcat as a back end. How do I enable PHP and JSP for all my applications?</H4>
 </a>
-<p>
-Download the J2EE binary and copy the <code>JavaBridge.jar</code> and the <code>php-servlet.jar</code> from the JavaBridge.war into the tomcat <code>shared/lib</code> folder. Add the lines marked with a <code>+</code> to the tomcat <code>conf/web.xml</code>:
-<blockquote>
-<code>
-<br>
-   &lt;!-- ================== Built In Servlet Definitions ==================== --&gt;<br>
-<br>
-+    &lt;!-- PHP Servlet --&gt;<br>
-+    &lt;servlet&gt;<br>
-+        &lt;servlet-name&gt;GlobalPhpJavaServlet&lt;/servlet-name&gt;<br>
-+        &lt;servlet-class&gt;php.java.servlet.PhpJavaServlet&lt;/servlet-class&gt;<br>
-+    &lt;/servlet&gt;<br>
-<br>
-   &lt;!-- The default servlet for all web applications, that serves static     --&gt;<br>
-   &lt;!-- resources.  It processes all requests that are not mapped to other   --&gt;<br>
-[...]<br>
-   &lt;!-- ================ Built In Servlet Mappings ========================= --&gt;<br>
-<br>
-+    &lt;!-- PHP Servlet Mapping --&gt;<br>
-+    &lt;servlet-mapping&gt;<br>
-+        &lt;servlet-name&gt;GlobalPhpJavaServlet&lt;/servlet-name&gt;<br>
-+        &lt;url-pattern&gt;*.phpjavabridge&lt;/url-pattern&gt;<br>
-+    &lt;/servlet-mapping&gt;<br>
-<br>
-   &lt;!-- The servlet mappings for the built in servlets defined above.  Note  --&gt;<br>
-   &lt;!-- that, by default, the CGI and SSI servlets are *not* mapped.  You    --&gt;<br>
-<br>
- &lt;/web-app&gt;<br>
-</code>
-</blockquote>
-</p>
-<p>
-Check if the tomcat <code>webapps</code> directory is shared with the Apache/IIS <code>htdocs</code> directory. If not, change the Apache/IIS setting, the following example is for Apache 2. Edit e.g. <code>/etc/httpd/conf/httpd.conf</code> as follows: 
-<blockquote>
-<code>
- # documents. By default, all requests are taken from this directory, but<br>
- # symbolic links and aliases may be used to point to other locations.<br>
- #<br>
--DocumentRoot "/var/www/html"<br>
-+DocumentRoot "/var/lib/tomcat5/webapps"<br>
-<br>
- #<br>
- # Each directory to which Apache has access can be configured with respect<br>
- #<br>
- # This should be changed to whatever you set DocumentRoot to.<br>
- #<br>
--&lt;Directory "/var/www/html"&gt;<br>
-+&lt;Directory "/var/lib/tomcat5/webapps"&gt;<br>
-</code>
-</blockquote>
-</p>
-<p>
-Now that tomcat knows how to handle PHP <code>.phpjavabridge</code> requests and Apache or IIS can access the tomcat webapps, connect the two components: Edit the <code>java.host</code> and <code>java.servlet</code> options in your <code>Java.inc</code> or, if you use the C implementation, the <code>php.ini</code>:
-<blockquote>
-<code>
-[java]<br>
-java.hosts = 127.0.0.1:8080<br>
-java.servlet = User<br>
-</code>
-</blockquote>
-The above <code>User</code> setting enables session sharing between PHP and JSP, it forwards from <code>http://host<em>/myApp/foo.php</em></code> to the tomcat back end at <code>127.0.0.1:8080</code> using the request <code>PUT <em>/myApp/foo.php</em>javabridge</code>. This triggers the <code>GlobalPhpJavaServlet</code> configured in the tomcat <code>web.xml</code>.
-</p>
-<p>
-Now you need to do the same for JSP. Unlike the PHP/Java Bridge, which only forwards embedded java statements, the tomcat <code>mod_jk</code> adapter must forward all JSP requests.
-Download and install <code>mod jk</code>, for example
-<code>jakarta-tomcat-connectors-1.2.14.1-src.tar.gz</code>, extract the file into a
-folder and type the following commands:
-<blockquote>
-<code>
-cd jakarta-tomcat-connectors-1.2.14.1-src/jk/native/<br>
-./configure --with-apxs && make && su -c "make install"<br>
-</code>
-</blockquote>
-Add the following lines to the end of the <code>httpd.conf</code>, the following example is for Apache 2:
-<blockquote>
-<code>
-LoadModule jk_module modules/mod_jk.so<br>
-JkAutoAlias /var/lib/tomcat5/webapps<br>
-JkMount *.jsp ajp13<br>
-</code>
-</blockquote>
-</p>
-To test the above settings create a directory <code>testapp</code> and copy the <code>sessionSharing.php</code> and <code>sessionSharing.jsp</code> from the <code>JavaBridge.war</code> into this folder. Type <code>cd testapp; jar cf ../testapp.war *</code> and copy the testapp.war into the tomcat <code>webapps</code> folder.
-Restart Apache or IIS and tomcat, browse to 
-<code>http://localhost/testapp</code>, click on sessionSharing.php and check the generated cookie value. The <code>path</code> value must be <code>/testapp</code>. Click on sessionSharing.jsp.
+<p> Set up Apache or IIS so that it forwards requests to the back
+end. Please see <a href="#load-balancing">the description above</a>
+for details.
 </p>
 
 
