--- a/FAQ.html
+++ b/FAQ.html
@@ -282,7 +282,7 @@ option <code>--with-mono</code>.</p>
 <p> During development simple libraries can be loaded dynamically with <code>java_require("myApplication.jar;myLib1.jar;myDriver1.jar;...");</code>. See the README for details.</p>
 
 <H4>Where can I store my java libraries for the PHP/Java Bridge?</H4>
-<p>Either within  your web application <code>WEB-INF/web.xml</code> directory or in <code>php.java.bridge.base</code>/lib.</p>
+<p>Either within  your web application <code>WEB-INF/lib</code> directory or in <code>php.java.bridge.base</code>/lib.</p>
 <p> When the system property <code>php.java.bridge.base</code> is not set, libraries are loaded from <code>$HOME/lib</code> where <code>$HOME</code> denotes the home directory of the person or component which has started the java VM.</p>
 <p> If libraries should be available globally, store them in <code>java.ext.dirs</code>, for example in <code>/usr/share/java/ext</code>.</p>
 <p> If a library is not yet API-stable, store it into a sub directory of the <code>lib</code> directory and use the <code>java_require()</code> procedure. For example <code>java_require("myLibs0.2/foo.jar")</code> loads <code>foo.jar</code> from <code>php.java.bridge.base/lib/myLibs0.2</code>.</p>
@@ -303,7 +303,7 @@ the library to the <code>java_require()</code> statement.</code></p>
 <a name="java-dll-hell"></a>
 <H4>Why do I get a NoClassDefFoundError?</H4>
 <p>Because Java doesn't have a module system.</p>
-<p>All interconnected libraries must be loaded by one class loader, for example by a single <code>java_require()</code> call. Furthermore all libraries must be stored at unique locations and all class loaders must load libraries from unique locations. See the README for details.</p>
+<p>All libraries and their dependencies must be loaded by one and only one class loader, for example with a single <code>java_require()</code> call. See the README for details.</p>
 <p><em>Please do not report NoClassDefFoundErrors to the mailing list or via the bug tracker. This is not a bug and we cannot help you any further!</em></p>
 
 <H4>I cannot require my JDBC driver!?!</H4>
