java autostart removed

--- a/FAQ.html
+++ b/FAQ.html
@@ -33,10 +33,7 @@ Furthermore IBM's Zero framework for Eclipse contains a PHP interpreter written 
 </ul>
 
 <H4>Do I need a Java Application Server or Servlet Engine?</H4>
-<p>Java needs an execution environment. Although there's a "java.so"
-and a "php_java.dll", which can start Java as a sub process of a HTTP
-server, a servlet engine or J2EE service is <a href="http://tomcat.apache.org">easier to install</a> and to
-handle than a standalone Java process started from some HTTP server.
+<p>Java needs an execution environment.
 </p>
 <p>
 You can also add PHP support to your Java application by adding the
